@@ -14,7 +14,7 @@ import java.util.Map;
 
 public class SymbolTableTypeCheck implements Visitor {
 	public SymbolTable symTab, symTabMethod, symTabClass, symTabProg;
-	public Map<Object, SymbolTable> tableMap = new HashMap<Object, SymbolTable>();
+	public Map<String, SymbolTable> tableMap = new HashMap<String, SymbolTable>();
 
 	public SymbolTableTypeCheck() 
 	{
@@ -25,6 +25,7 @@ public class SymbolTableTypeCheck implements Visitor {
 		symTabProg = n.symTab;
 		n.mainClass.accept(this);
 		n.classDecls.accept(this);
+		return null;
 	}
 
 	public Object visit(MainClass n) {
@@ -33,7 +34,7 @@ public class SymbolTableTypeCheck implements Visitor {
 		n.args.accept(this);
 		n.v.accept(this);
 		n.stmt.accept(this);
-
+		return null;
 	}
 
 	public Object visit(ClassDeclDeffSimple n) {
@@ -41,6 +42,7 @@ public class SymbolTableTypeCheck implements Visitor {
 		n.className.accept(this);
 		n.fields.accept(this); // enter fields into the symbol table
 		n.methods.accept(this);
+		return null;
 	}
 
 	public Object visit(ClassDeclDeffExtend n) {
@@ -50,6 +52,7 @@ public class SymbolTableTypeCheck implements Visitor {
 		n.className.accept(this);
 		n.extendedClass.accept(this);
 		n.variableList.accept(this);
+		return null;
 	}
 
 	public Object visit(ClassDeclList n) {
@@ -62,41 +65,47 @@ public class SymbolTableTypeCheck implements Visitor {
 				((ClassDeclDeffExtend) c).accept(this);
 			}
 		}
+		return null;
 	}
 
 	public Object visit(VarDecl n) {
 		Type t = n.type;
 		t.accept(this);
 		n.variableType.accept(this, t);
+		return null;
 	}
 
 	public Object visit(VarDeclType n, Type t) {
 		symTab.check(n.variableName, IdType.VARIABLE);
 		if (n.exp != null) {
-			symTab.check(n.variableName, n.exp.accept(this)); // should have the same type
+			symTab.check(n.variableName, (String)n.exp.accept(this)); // should have the same type
 		}
+		return null;
 	}
 
 	public Object visit(MethodDecl n) {
 		symTab = symTabMethod = n.symTab;
-		Object methodReturnType = n.type.accept(this);
+		String methodReturnType = (String)n.type.accept(this);
 		n.methodName.accept(this);
 		n.parameters.accept(this);
 		n.variables.accept(this);
 		n.statement.accept(this);
-		Object expReturnType = n.expReturn.accept(this);
+		String expReturnType = (String)n.expReturn.accept(this);
 		symTab.check(methodReturnType, expReturnType); // if the return type of the
+		return null;
 	}
 
 	public Object visit(FormalList n) {
 		n.type.accept(this);
 		n.parameterName.accept(this);
 		n.moreParams.accept(this);
+		return null;
 	}
 
 	public Object visit(FormalRest n) {
 		n.type.accept(this);
 		n.paramName.accept(this);
+		return null;
 	}
 
 	public Object visit(Block n) {
@@ -106,20 +115,20 @@ public class SymbolTableTypeCheck implements Visitor {
 	}
 
 	public Object visit(If n) {
-		symTab.check(n.condition.accept(this), "BooleanType");
+		symTab.check((String)n.condition.accept(this), "BooleanType");
 		n.s.accept(this);
 		n.elseIf.accept(this);
 		return null;
 	}
 
 	public Object visit(Do n) {
-		symTab.check(n.condition.accept(this), "BooleanType");
+		symTab.check((String)n.condition.accept(this), "BooleanType");
 		n.s.accept(this);
 		return null;
 	}
 
 	public Object visit(While n) {
-		symTab.check(n.condition.accept(this), "BooleanType");
+		symTab.check((String)n.condition.accept(this), "BooleanType");
 		n.s.accept(this);
 		return null;
 	}
@@ -145,9 +154,10 @@ public class SymbolTableTypeCheck implements Visitor {
 
 	public Object visit(InitializeSimple n) {
 		symTab.check(n.id, IdType.VARIABLE);
-		Object tLeft = symTab.getType(n.id);
-		Object tRight = n.assignExp.accept(this);
+		String tLeft = symTab.getType(n.id);
+		String tRight = (String)n.assignExp.accept(this);
 		symTab.check(tLeft, tRight); // should have the same type
+		return null;
 	}
 
 	public Object visit(InitializeArray n) {
@@ -156,23 +166,25 @@ public class SymbolTableTypeCheck implements Visitor {
 		n.assignExp.accept(this);
 		symTab.check(n.id, "IntArrayType");
 		n.id.accept(this);
-		Object indexType = n.arrayExp.accept(this);
-		Object valueType = n.assignExp.accept(this);
+		String indexType = (String)n.arrayExp.accept(this);
+		String valueType = (String)n.assignExp.accept(this);
 		if (!valueType.equals("IntegerType")) {
 			System.out.println("Value assigned to int array should be of type int");
 		}
 		if (!indexType.equals("IntegerType"))
 			System.out.println("Array index should be int");
+		return null;
 	}
 
 	public Object visit(IncrementSimple n) {
 		symTab.check(n.id, IdType.VARIABLE);
-		Object tLeft = symTab.getType(n.id);
+		String tLeft = symTab.getType(n.id);
 		n.id.accept(this);
-		Object tRight = n.assignExp.accept(this);
+		String tRight = (String)n.assignExp.accept(this);
 		symTab.check(tLeft, tRight); // should have the same type
 		n.id.accept(this);
 		n.assignExp.accept(this);
+		return null;
 	}
 
 	public Object visit(IncrementArray n) {
@@ -181,8 +193,8 @@ public class SymbolTableTypeCheck implements Visitor {
 		n.assignExp.accept(this);
 		symTab.check(n.id, "IntArrayType");
 		n.id.accept(this);
-		Object indexType = n.arrayExp.accept(this);
-		Object valueType = n.assignExp.accept(this);
+		String indexType = (String)n.arrayExp.accept(this);
+		String valueType = (String)n.assignExp.accept(this);
 		if (!valueType.equals("IntegerType")) {
 			System.out.println("Value assigned to int array should be of type int");
 		}
@@ -191,32 +203,36 @@ public class SymbolTableTypeCheck implements Visitor {
 		n.id.accept(this);
 		n.arrayExp.accept(this);
 		n.assignExp.accept(this);
+		return null;
 	}
 
 	public Object visit(ElseIf n) {
-		symTab.check(n.condition.accept(this), "BooleanType");
+		symTab.check((String)n.condition.accept(this), "BooleanType");
 		n.s.accept(this);
+		return null;
 	}
 
 	public Object visit(CaseListCase n) {
-		Object caseExp;
+		String caseExp;
 
-		caseExp = n.caseExp.accept(this);
+		caseExp = (String)n.caseExp.accept(this);
 		symTab.check(n.id, caseExp);
 		n.s.accept(this);
 		n.caseList.accept(this);
+		return null;
 	}
 
 	public Object visit(CaseListDefault n) {
 		n.s.accept(this);
+		return null;
 	}
 
 	public Object visit(ExpList n, Identifier id) {
 
 		Binding bind = symTab.get(id);
-		symTab.check(n.e.accept(this), bind.parms.get(0));
+		symTab.check((String)n.e.accept(this), bind.parms.get(0));
 		n.multipleExp.accept(this, id);
-
+		return null;
 	}
 
 	public Object visit(ExpRest n) {
@@ -224,23 +240,25 @@ public class SymbolTableTypeCheck implements Visitor {
 	}
 
 	public Object visit(ClassDecl n) {
-		// does nothing
+		return null;
 	}
 
 	public Object visit(VarDeclList n) {
 		for (VarDecl v : n) {
 			v.accept(this);
 		}
+		return null;
 	}
 
 	public Object visit(MethodDeclList n) {
 		for (MethodDecl m : n) {
 			m.accept(this);
 		}
+		return null;
 	}
 
 	public Object visit(Statement n) {
-
+		return null;
 
 	}
 
@@ -269,35 +287,36 @@ public class SymbolTableTypeCheck implements Visitor {
 		for (Statement s : n) {
 			s.accept(this);
 		}
-
+		return null;
 	}
 
 	public Object visit(InitializationStm n) {
 		// does nothing
-
+		return null;
 	}
 
 	public Object visit(IncrementStm n) {
 		// does nothing
-
+		return null;
 	}
 
 	public Object visit(CaseList n) {
 		// does nothing
-
+		return null;
 	}
 
 	public Object visit(FormalRestList formalRestList) {
 		for (FormalRest f : formalRestList) {
 			f.accept(this);
 		}
-
+		return null;
 	}
 
 	public Object visit(ElseIfList elseIfList) {
 		for (ElseIf e : elseIfList) {
 			e.accept(this);
 		}
+		return null;
 	}
 
 	public Object visit(ExpRestList expRestList, Identifier id) 
@@ -312,11 +331,11 @@ public class SymbolTableTypeCheck implements Visitor {
 		else
 			bind = symTabProg.get(id);
 		for (int i = 0; i < expRestList.size(); i++) {
-			Object typeInSymTab = bind.parms.get(i + 1);
-			Object typeOfExp = expRestList.get(i).accept(this);
+			String typeInSymTab = bind.parms.get(i + 1);
+			String typeOfExp = (String)expRestList.get(i).accept(this);
 			symTab.check(typeInSymTab, typeOfExp);
-
 		}
+		return null;
 	}
 
 	public Object visit(DotArrayList dotArrayList) {
@@ -327,6 +346,7 @@ public class SymbolTableTypeCheck implements Visitor {
 				((DotArrayMember) e).accept(this);
 			}
 		}
+		return null;
 	}
 
 	public Object visit(DotArray n) {
@@ -350,9 +370,9 @@ public class SymbolTableTypeCheck implements Visitor {
 	public Object visit(AssignSimple n) {
 		symTab = symTabMethod;
 		symTab.check(n.id, IdType.VARIABLE);
-		Object tLeft = symTab.getType(n.id);
+		String tLeft = symTab.getType(n.id);
 		n.id.accept(this);
-		Object tRight = n.assignment.accept(this);
+		String tRight = (String)n.assignment.accept(this);
 		symTab.check(tLeft, tRight); // should have the same type
 		return tRight;
 	}
@@ -360,8 +380,8 @@ public class SymbolTableTypeCheck implements Visitor {
 	public Object visit(AssignArray n) {
 		symTab.check(n.id, "IntArrayType");
 		n.id.accept(this);
-		Object indexType = n.index.accept(this);
-		Object valueType = n.value.accept(this);
+		String indexType = (String)n.index.accept(this);
+		String valueType = (String)n.value.accept(this);
 		if (!valueType.equals("IntegerType")) {
 			System.out.println("Value assigned to int array should be of type int");
 		}
@@ -416,7 +436,7 @@ public class SymbolTableTypeCheck implements Visitor {
 	}
 
 	public Object visit(NewArray n) {
-		symTab.check(n.e.accept(this), "IntegerType");
+		symTab.check((String)n.e.accept(this), "IntegerType");
 		return "IntArrayType";
 	}
 
@@ -446,10 +466,10 @@ public class SymbolTableTypeCheck implements Visitor {
 	}
 
 	public Object visit(Exp n) {
-		Object left, right;
-		left = n.and.accept(this);
+		String left, right;
+		left = (String)n.and.accept(this);
 		if (n.elist.and != null) {
-			right = n.elist.accept(this);
+			right = (String)n.elist.accept(this);
 			if (!(left.equals(right)))
 				System.err.println("Mismatching Types in Exp");
 			return right;
@@ -458,10 +478,10 @@ public class SymbolTableTypeCheck implements Visitor {
 	}
 
 	public Object visit(Elist n) {
-		Object left, right;
-		left = n.and.accept(this);
+		String left, right;
+		left = (String)n.and.accept(this);
 		if (n.elist.and != null) {
-			right = n.elist.accept(this);
+			right = (String)n.elist.accept(this);
 			if (!(left.equals(right)))
 				System.err.println("Mismatching Types in Elist");
 			return right;
@@ -470,11 +490,11 @@ public class SymbolTableTypeCheck implements Visitor {
 	}
 
 	public Object visit(And n) {
-		Object left, right;
-		left = n.less.accept(this);
+		String left, right;
+		left = (String)n.less.accept(this);
 		if (n.alist.less != null) 
 		{
-			right = n.alist.accept(this);
+			right = (String)n.alist.accept(this);
 			if (!(left.equals(right)))
 				System.err.println("Mismatching Types in And");
 			return "BooleanType";
@@ -483,10 +503,10 @@ public class SymbolTableTypeCheck implements Visitor {
 	}
 
 	public Object visit(Alist n) {
-		Object left, right;
-		left = n.less.accept(this);
+		String left, right;
+		left = (String)n.less.accept(this);
 		if (n.alist.less != null) {
-			right = n.alist.accept(this);
+			right = (String)n.alist.accept(this);
 			if (!(left.equals(right)))
 				System.err.println("Mismatching Types in Alist");
 			return right;
@@ -495,10 +515,10 @@ public class SymbolTableTypeCheck implements Visitor {
 	}
 
 	public Object visit(Less n) {
-		Object left, right;
-		left = n.term.accept(this);
+		String left, right;
+		left = (String)n.term.accept(this);
 		if ((n.llist != null) && ((n.llist instanceof LlistDifference) || (n.llist instanceof LlistSum))) {
-			right = n.llist.accept(this);
+			right = (String)n.llist.accept(this);
 			if (!(left.equals(right)))
 				System.err.println("Mismatching Types in Less");
 			return right;
@@ -515,10 +535,10 @@ public class SymbolTableTypeCheck implements Visitor {
 	}
 
 	public Object visit(LlistDifference n) {
-		Object left, right;
-		left = n.term.accept(this);
+		String left, right;
+		left = (String)n.term.accept(this);
 		if ((n.llist != null) && ((n.llist instanceof LlistDifference) || (n.llist instanceof LlistSum))) {
-			right = n.term.accept(this);
+			right = (String)n.term.accept(this);
 			if (!(left.equals(right)))
 				System.err.println("Mismatching Types in LlistDifference");
 			return right;
@@ -527,10 +547,10 @@ public class SymbolTableTypeCheck implements Visitor {
 	}
 
 	public Object visit(LlistSum n) {
-		Object left, right;
-		left = n.term.accept(this);
+		String left, right;
+		left = (String)n.term.accept(this);
 		if ((n.llist != null) && ((n.llist instanceof LlistDifference) || (n.llist instanceof LlistSum))) {
-			right = n.term.accept(this);
+			right = (String)n.term.accept(this);
 			if (!(left.equals(right)))
 				System.err.println("Mismatching Types in LlistSum");
 			return right;
@@ -539,10 +559,10 @@ public class SymbolTableTypeCheck implements Visitor {
 	}
 
 	public Object visit(Term n) {
-		Object left, right;
-		left = n.not.accept(this);
+		String left, right;
+		left = (String)n.not.accept(this);
 		if (n.tlist.not != null) {
-			right = n.tlist.accept(this);
+			right = (String)n.tlist.accept(this);
 			if (!(left.equals(right)))
 				System.err.println("Mismatching Types in Term");
 			return right;
@@ -551,10 +571,10 @@ public class SymbolTableTypeCheck implements Visitor {
 	}
 
 	public Object visit(Tlist n) {
-		Object left, right;
-		left = n.not.accept(this);
+		String left, right;
+		left = (String)n.not.accept(this);
 		if (n.tlist.not != null) {
-			right = n.tlist.accept(this);
+			right = (String)n.tlist.accept(this);
 			if (!(left.equals(right)))
 				System.err.println("Mismatching Types in Term");
 			return right;
@@ -564,9 +584,9 @@ public class SymbolTableTypeCheck implements Visitor {
 	}
 
 	public Object visit(NotFactor n) {
-		Object returnType = n.factor.accept(this);
+		String returnType = (String)n.factor.accept(this);
 		if (!(n.dotList.isEmpty())) {
-			return n.dotList.getLast().accept(this);
+			return n.dotList.get(n.dotList.size() - 1).accept(this);
 		} else
 			return returnType;
 	}
@@ -594,6 +614,12 @@ public class SymbolTableTypeCheck implements Visitor {
 	}
 
 	public Object visit(New n) {
+		return null;
+	}
+
+	@Override
+	public Object visit(Object o1, Object o2) {
+		
 		return null;
 	}
 
